<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B8E4B9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getStarted">

    <Button
        android:id="@+id/button14"
        android:layout_width="153dp"
        android:layout_height="66dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Get Started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="236dp"
        android:layout_height="127dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>