<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8E4B9"
    tools:context="com.example.foreverfind.mainpage">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_showShop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="6dp"
        android:src="@drawable/cart02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyMenu"
        android:layout_width="409dp"
        android:layout_height="601dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>