...
        android:layout_below="@+id/rel01">

    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/next_process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
...
